--- a/README.asciidoc
+++ b/README.asciidoc
@@ -12,13 +12,15 @@ Max Vilimpoc (@vilimpoc)
 
 This document contains a collection of tips and scripts to harden your Windows computer and Chrome browser against attackers.
 
-Unfortunately, both of these things need to be treated adversarially with a hardened security posture.
+Unfortunately, both of these pieces of software need to be treated adversarially with a hardened security posture.
 
 Any tips and well-composed content that people would like to add to this document via issues + pull requests would be greatly appreciated!
 
-Or you can Direct Message suggestions to https://twitter.com/vilimpoc[@vilimpoc] or drop me an e-mail https://vilimpoc.org/contact.php[here].
+Or you can send suggestions via DM to https://twitter.com/vilimpoc[@vilimpoc] or drop me an e-mail https://vilimpoc.org/contact.php[here].
 
 == Audience
+
+This guide is intended for anyone who wants to tighten up their security posture and take up a position of security by default.
 
 This guide is written specifically with Windows 10 Version 1809 (October 2018 Update) in mind and will be updated as newer versions are released.
 
@@ -26,25 +28,45 @@ If you're not running the latest version of Windows 10 on your system, then you 
 
 Also, newer versions of Windows 10 tend to have better performance and lower UX latency, so why not update?
 
+<<<
+
 == Hardening Windows
 
-There are too many security-relevant settings to count in Windows, but here are a few that are easily configured.
+There are too many security-relevant settings to count in Windows, but the following pages describe a few easy changes that offer increased security to the average user.
+
+The topics in this document are ordered from least to most difficult to understand, such that the final items might be more in-depth than most readers would care to delve into.
+
+So, without further ado, let's get started.
 
 <<<
 
 === Create and Use a Standard User Account
 
-Windows uses "two" types of primary accounts, Administrator and Standard User.
+First and foremost, the biggest and simplest change the average user can make to the way they use their computers is to create and use a _Standard User Account_.
 
-_Administrator_ accounts are the ones that can do anything to your computer. They can install software, change firewall settings, delete any and all files, and make permanent changes to the system configuration that affect every user.
+Windows generally separates users into "two" types of accounts: Administrator and Standard User.footnote:[There are actually more types of accounts, but the primary types that are assigned to human users that actually interact with a computer, are these two types. macOS and Linux also follow the same general distinction.]
 
-It makes no sense to use an Administrator account for everything you do, and it's a shame that Microsoft _still_ defaults to creating Administrator accounts first when installing Windows. _This is like running with scissors._ (And, to be fair, Apple still does this too.)
+==== Administrators
 
-If your computer has only one account on it, then by default, Microsoft made this an Administrator account.
+_Administrator_ accounts can do anything to your computer.
 
-_Standard User_ accounts cannot make permanent or fundamental changes to the operating system that threaten a computer's ability to boot and run. They can't delete system files or access files from other users.
+They can install software, change firewall settings, delete any and all files, and make permanent changes to the system configuration that affect every user on the system.
+
+If you run malware while logged in as an Administrator, then that malware will have complete control over your computer and _all of its files_ and _all of its network connectivity_.
+
+It may be able to infest your system so thoroughly that only a clean install on a fully wiped system using a Secure Boot medium will allow you to use the system again.footnote:[And even then, against nation state-level bad actors, you might have to worry about threats persisting in system firmware.]
+
+// It makes no sense to use an Administrator account for everything you do, and it's a shame that Microsoft _still_ defaults to creating Administrator accounts first when installing Windows. _This is like running with scissors._ (And, to be fair, Apple still does this too.)
+
+// If your computer has only one account on it, then by default, Microsoft made this an Administrator account.
+
+==== Standard Users
+
+_Standard User_ accounts cannot make permanent or fundamental changes to the operating system that threaten a computer's ability to boot and run. Because they have limited rights, they can't delete system files or access files from other users.
 
 This type of account should be used for day to day work and add an extra layer of security against malware getting a deep hold in your system.
+
+==== Add A Standard User Account
 
 Obnoxiously, Microsoft makes it as hard as they possibly can to create a non-online, standard user account.
 
@@ -58,7 +80,7 @@ The account creation process is worded in such a way that it sounds like you're 
 
 image::add-user-2.png[Add User 2]
 
-No, I don't want to log in with a Microsoft account or create a new one that Microsoft gets to know about.
+No, I don't want to log in with a Microsoft account or create a new one that Microsoft has to know about.
 
 image::add-user-3.png[Add User 3]
 
@@ -357,9 +379,15 @@ Kudos to https://support.dell.com[Dell] and https://pcsupport.lenovo.com/[Lenovo
 
 == Hardening Chrome
 
+As it turns out, having a browser built by the world's largest advertising company may not provide the most end-user privacy.
+
+The following tips are meant to provide a safer alternative to the default settings and reduce the online footprint each person leaves behind.
+
 <<<
 
 === Blocking Third-Party Cookies
+
+:imagesdir: videos
 
 Third-party cookies follow you around the internet. These are the tiny pieces of data that expose you as a targetable, profiled individual online.
 
@@ -370,16 +398,18 @@ These are how Amazon, Google, Facebook, and other advertisers know when to show 
 Let's say you visit Buzzfeed, at least a dozen ad agencies will find out exactly what you did there:
 
 [link=https://youtu.be/37w5Iu6MLgM]
-image::https://img.youtube.com/vi/37w5Iu6MLgM/0.jpg[]
+image::blocked-cookies.png[]
 
 This happens on every single website you visit, so multiply the number of cookies you're generating by a hundred.
 
 Here's how to disable these web tracking cookies:
 
 [link=https://youtu.be/EhsUcpivM_I]
-image::https://img.youtube.com/vi/EhsUcpivM_I/0.jpg[]
+image::block-third-party-cookies.png[]
 
 Once the third-party cookies are blocked, the list of cookies per website will drop substantially.
+
+:imagesdir: images
 
 <<<
 
